--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: monospace;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: rgb(70,24,42);
+  background: linear-gradient(0deg, rgba(70,24,42,1) 2%, rgba(203,34,99,1) 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,56 +14,100 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html {
+  height: 100%;
 }
 
 body {
+  min-height: 100%;
+  box-sizing: border-box;
+  padding: 8px;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.noMargin {
+  margin: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.width100percent{
+  width: 100%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.height100percent{
+  height: 100%;
+}
+
+.flexColumn { 
+  display: flex; 
+  flex-direction: column;
+  gap: 20px;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.alignCenter {
+  align-items: center;
+}
+
+.alignStart {
+  align-items: start;
+}
+
+.alignEnd {
+  align-items: end;
+}
+
+.flexUnit {
+  flex: 1;
+}
+
+.flexRest {
+  flex: auto;
+}
+
+.textarea {
+  border-radius: 5px;
+  border: 2px solid #dbdbdb;
+  padding: 10px; 
+  resize: none;
+  width: 100%;
+  box-sizing: border-box;
+  outline: none!important;
+}
+
+.textarea:focus {
+  border: 2px solid white;
+}
+
+.input {
+  border-radius: 5px;
+  border: 2px solid #dbdbdb;
+  padding: 14px 10px; 
+  resize: none;
+  box-sizing: border-box;
+  outline: none!important;
+  text-align: center;
+
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.input:focus {
+  border: 2px solid white;
+}
+
+.button {
+  max-height: 50px;
+  border: 1px solid white;
+  padding: 10px 20px;
+  font-size: 18px;
+  border-radius: 5px;
+  font-weight: bold;
+
+  transition: background-color 400ms ease-in, box-shadow 400ms ease-in;
+}
+
+.button.active {
+  background-color: #d3165f;
+  box-shadow: 0px 4px 10px rgb(185 69 69);
 }
