--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,11 @@ body {
   background-color: #d3165f;
   box-shadow: 0px 4px 10px rgb(185 69 69);
 }
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
